Fix: Aligned cast photos in rounded cards

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -191,6 +191,10 @@ html {
     border-radius: 50%;
 }
 
+#castCollapsible .cardContent.cardImageContainer {
+    background-position-y: 33%;
+}
+
 .layout-mobile .cardScalable {
     border: var(--defaultBorder) !important;
 }
